cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8.txt
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/repl/REPLRunnable.java:67: error: (required.method.not.called) $$ 4 $$ method close $$ outputFileName != null ? new FileOutputStream(outputFileName) : System.out $$ java.io.OutputStream $$ possible exceptional exit due to new FileOutputStream(errorsFileName) with exception type java.io.FileNotFoundException $$ ( 2695, 2769 ) $$ @MustCall method close may not have been invoked on outputFileName != null ? new FileOutputStream(outputFileName) : System.out or any of its aliases.
                outputFileName != null ? new FileOutputStream(outputFileName) : System.out,
                                       ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: possible exceptional exit due to new FileOutputStream(errorsFileName) with exception type java.io.FileNotFoundException
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/repl/REPLRunnable.java:68: error: (required.method.not.called) $$ 4 $$ method close $$ errorsFileName != null ? new FileOutputStream(errorsFileName) : System.err $$ java.io.OutputStream $$ regular method exit $$ ( 2787, 2861 ) $$ @MustCall method close may not have been invoked on errorsFileName != null ? new FileOutputStream(errorsFileName) : System.err or any of its aliases.
                errorsFileName != null ? new FileOutputStream(errorsFileName) : System.err
                                       ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/repl/REPL.java:51: error: (return) $$ 2 $$ @MustCall("close") REPLRunnable</*RAW*/> $$ @MustCall REPLRunnable</*RAW*/> $$ ( 1820, 2011 ) $$ incompatible types in return.
        return inputFileName != null ? new ScriptREPLRunnable(dbFileName, inputFileName, outputFileName, errorsFileName) :
                                     ^
  type of expression: @MustCall("close") REPLRunnable</*RAW*/>
  method return type: @MustCall REPLRunnable</*RAW*/>
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/repl/ScriptREPLRunnable.java:18: error: (type.argument) $$ 4 $$ Q $$ REPLRunnable $$ @MustCall("close") FileInputStream $$ @MustCall Object $$ ( 497, 512 ) $$ incompatible type argument for type parameter Q of REPLRunnable.
public class ScriptREPLRunnable extends REPLRunnable<FileInputStream> {
                                                     ^
  found   : @MustCall("close") FileInputStream
  required: @MustCall Object
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/repl/ScriptREPLRunnable.java:28: error: (assignment) $$ 2 $$ @PolyMustCall FileInputStream $$ @MustCall("close") FileInputStream $$ ( 980, 995 ) $$ incompatible types in assignment.
        this.fileInputStream = fileInputStream;
                               ^
  found   : @PolyMustCall FileInputStream
  required: @MustCall("close") FileInputStream
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/table/TableBase.java:202: error: (required.method.not.called) $$ 4 $$ method close $$ pageView $$ ru.spbau.tinydb.bufferManager.BufferView $$ regular method exit $$ ( 7414, 7462 ) $$ @MustCall method close may not have been invoked on pageView or any of its aliases.
                        pageView = bufferManager.getPage(curPageNotFull);
                                 ^
  The type of object is: ru.spbau.tinydb.bufferManager.BufferView.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/table/TableBase.java:205: error: (required.method.not.called) $$ 4 $$ method close $$ pageView $$ ru.spbau.tinydb.bufferManager.BufferView $$ regular method exit $$ ( 7568, 7613 ) $$ @MustCall method close may not have been invoked on pageView or any of its aliases.
                            pageView = bufferManager.getPage(curPageFull);
                                     ^
  The type of object is: ru.spbau.tinydb.bufferManager.BufferView.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/table/TableBase.java:241: error: (required.method.not.called) $$ 4 $$ method close $$ recordView $$ ru.spbau.tinydb.bufferManager.BufferView $$ regular method exit $$ ( 9183, 9292 ) $$ @MustCall method close may not have been invoked on recordView or any of its aliases.
                BufferView recordView = pageView.getSubView(POINTERS_SIZE + bitSetSize + recordPos * recordSize, recordSize);
                           ^
  The type of object is: ru.spbau.tinydb.bufferManager.BufferView.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/bufferManager/BufferManager.java:47: error: (required.method.not.called) $$ 4 $$ method close $$ new RandomAccessFile(dbFile, "rw") $$ java.io.RandomAccessFile $$ possible exceptional exit due to init() with exception type ru.spbau.tinydb.common.DBException $$ ( 1785, 1819 ) $$ @MustCall method close may not have been invoked on new RandomAccessFile(dbFile, "rw") or any of its aliases.
            this.dbFile = new RandomAccessFile(dbFile, "rw");
                          ^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: possible exceptional exit due to init() with exception type ru.spbau.tinydb.common.DBException
../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/grammar/GrammarTester.java:48: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(testName) $$ java.io.FileInputStream $$ possible exceptional exit due to new ANTLRInputStream(new FileInputStream(testName)) with exception type java.io.IOException $$ ( 1428, 1457 ) $$ @MustCall method close may not have been invoked on new FileInputStream(testName) or any of its aliases.
                        new SQLGrammarLexer(new ANTLRInputStream(new FileInputStream(testName)))));
                                                                 ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to new ANTLRInputStream(new FileInputStream(testName)) with exception type java.io.IOException
Note: ../dataset/june2020_dataset_copy/url3472127e1f_SergeyKrivohatskiy_tiny_database_tgz-pJ8-ru_spbau_tinydb_bufferManager_IndexTestJ8/src/ru/spbau/tinydb/grammar/SQLGrammarParser.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
